--- a/index.html
+++ b/index.html
@@ -119,6 +119,29 @@
         and various other judges, you are probably using an online compiler to solve problems. 
         In that case, copying, modifying, and running test cases becomes laborious. You need to switch tabs to copy-paste test cases and modify them. Solving problems is already challenging.
     </p>
+
+    <table style="width: 100%;margin-bottom: 50px;">
+        <tr>
+            <th>sl.no</th>
+            <th>name</th>
+            <th>age</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>jhon</td>
+            <td>35</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>cane</td>
+            <td>25</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>hhh</td>
+            <td>40</td>
+        </tr>
+    </table>
     
 
 </body>
